@@ -1,3 +1,4 @@
+ Mon Jun 24 2013 - added ':!' to execute arbitrary string in taskwarrior
  Sun Jun 23 2013 - added Copyright 2012 - 2013, Steve Rader
 
  Wed Apr  3 2013 - released v1.1
